<resources>
    <string name="app_name">Thai Pharma</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="contact">24 x 7 Helpline</string>
    <string name="news">QR Barcode Scanner</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="disease">Diseases</string>
    <string name="home">News</string>
    <string name="drug">Drug Search</string>
    <string name="english">English</string>
    <string name="thai">Thai</string>
    <string name="welcome_greeting">Welcome !</string>
    <string name="login_register">Login / Register</string>
    <string name="webview_error">Check internet connectivity</string>
    <string name="change_language">Change Language to Thai</string>
    <string name="settings">Settings</string>
    <string name="translation">Enable Thai translation</string>
    <string name="calculators">Calculators</string>
    <string name="scanner">QR Barcode Scanner</string>
    <string name="scan_info">Scanned Information</string>
    <string name="tab_text_01">Multidisciplinary</string>
    <string name="tab_text_02">Cardiology</string>
    <string name="tab_text_03">Dermatology</string>
    <string name="tab_text_04">Endocrinology</string>
    <string name="tab_text_05">Gastroenterology</string>
    <string name="tab_text_06">Hepatology</string>
    <string name="tab_text_07">Infectious Diseases</string>
    <string name="tab_text_08">Neurology</string>
    <string name="tab_text_09">Obstetrics and Gynaecology</string>
    <string name="tab_text_10">Oncology</string>
    <string name="tab_text_11">Ophthalmology</string>
    <string name="tab_text_12">Paediatrics</string>
    <string name="tab_text_13">Psychiatry</string>
    <string name="tab_text_14">Respirology</string>
    <string name="tab_text_15">Rheumatology</string>
    <string name="tab_text_16">Urology</string>
    <string name="speciality">Speciality</string>
    <string name="net_available">Page will be reloaded shortly</string>
    <string name="net_not_available">No Internet Access</string>
    <string name="button_language">Choose English</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account ? Sign Up !</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="registration_number">Registration Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an Account ? Sign In !</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full name</string>
    <string name="next">Next</string>
    <string name="practice_workplace_name">Practice/Workplace Name</string>
    <string name="account_information">Account Information</string>
    <string name="professional_profile">Professional Information</string>
    <string name="select_prof">Select your Profession</string>
    <string name="dentist">Dentist</string>
    <string name="DispensaryAssistant">Dispensary Assistant</string>
    <string name="Doctor">Doctor</string>
    <string name="AlliedHealthcare">Allied Healthcare</string>
    <string name="demo_slider_headlines">What causes Alzheimers? Scientists reveal</string>
    <string name="search_drugs">Search drugs by brands, generic names</string>
    <string name="SignInSuccessful">Sign In Successful</string>
    <string name="IncorrectCredentials">Incorrect credentials</string>
    <string name="SomethingWentWrong">Something went wrong</string>
    <string name="logout">Logout</string>
    <string name="type_brand">Type: Brand</string>
    <string name="type_generic">Type: Generic</string>
    <string name="type_pharma">Type: Pharmacy</string>
    <string name="language_setting">Change Language</string>
    <string name="speciality_details">Speciality Details</string>
</resources>