<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:visible="false"/>/>
        <item
            android:id="@+id/nav_drug"
            android:icon="@drawable/ic_drug"
            android:title="@string/drug" />
        <item
            android:id="@+id/nav_disease"
            android:icon="@drawable/ic_speciality"
            android:title="@string/speciality"
            android:visible="false"/>/>
        <item
            android:id="@+id/nav_speciality"
            android:icon="@drawable/ic_calculator"
            android:title="@string/speciality"
            android:visible="true"/>/>
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_calculator"
            android:title="@string/news"
            android:visible="true"/>
        <item
            android:id="@+id/nav_calculators"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculators" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"

            android:title="@string/language_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            android:visible="false"/>/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact"
            android:visible="false"/>/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_close"
            android:title="@string/logout"
            android:visible="false"/>/>
    </group>
    <!--
        <item android:title="@string/miscellaneous">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact" />
            </menu>
        </item>
    -->
    </menu>