<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="80sp"
            android:layout_marginEnd="16sp"
            android:backgroundTint="#70000000"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="#70000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="32sp"
            android:layout_marginEnd="16sp"
            android:backgroundTint="#70000000"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#70000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

        <TextView
            android:id="@+id/sign_in_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/sign_in_password"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:background="@color/colorDisabled"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_forgot_password" />

        <TextView
            android:id="@+id/sign_in_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="8sp"
            android:text="@string/or"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:layout_marginBottom="24sp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="80sp"
            android:layout_height="1sp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_or"
            app:layout_constraintEnd_toStartOf="@+id/sign_in_or"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button"
            app:layout_constraintTop_toTopOf="@+id/sign_in_or" />

        <View
            android:id="@+id/divider2"
            android:layout_width="80sp"
            android:layout_height="1sp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_or"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
            app:layout_constraintStart_toEndOf="@+id/sign_in_or"
            app:layout_constraintTop_toTopOf="@+id/sign_in_or" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>